[package]
name = "aoc-day1"
version = "0.1.0"
authors = ["VeerGoiporia <veer.goiporia@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
recap = "0.1"
serde = "1.0.114"
regex = "1.3.9"
